...
                guard let self = self else { return }
                self.presenter?.didUpdateProgressValue(0)
            }
        )
        
        presenter?.viewDidLoad()
        webView.accessibilityIdentifier = "UnsplashWebView"
    }
    
    func load(request: URLRequest) {
        webView.load(request)
    }
    
...
